Bug-001 - Fixed. Apparently, the use of @SerializedName with object of type Object in JsonDataSearch class, wasn't working how expected for serialization. Changed for @Expose and works fine now.

--- a/app/src/main/res/layout/item_list_label.xml
+++ b/app/src/main/res/layout/item_list_label.xml
@@ -15,10 +15,9 @@
             android:id="@+id/textItemLabel"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:gravity="left"
+            android:gravity="start"
             android:maxLines="2"
             android:padding="20dp"
-            android:text="AVENIDA PROFESSOR HENRIQUE DA SILVA FONTES"
             android:textColor="@color/material_secondary_text"
             android:textSize="16sp" />
 
