--- a/app/src/main/res/layout/activity_timetable_detail.xml
+++ b/app/src/main/res/layout/activity_timetable_detail.xml
@@ -9,14 +9,6 @@
 
     <include layout="@layout/toolbar" />
 
-    <!--<it.neokree.materialtabs.MaterialTabHost-->
-    <!--android:id="@+id/tabHost"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="48dp"-->
-    <!--app:textColor="#FFFFFF"-->
-    <!--app:primaryColor="@color/material_primary"-->
-    <!--app:accentColor="@color/material_blue_grey_800" />-->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
@@ -29,14 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="?attr/colorPrimary"
+            app:pstsIndicatorHeight="5dp"
+            app:pstsIndicatorColor="@android:color/white"
         />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/tabHost" />
-
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 </LinearLayout>
