--- a/app/src/main/res/layout/item_route_list.xml
+++ b/app/src/main/res/layout/item_route_list.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/titleTextRoute"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right|top"
+                    android:layout_gravity="end|top"
                     android:maxLines="1"
                     android:padding="10sp"
                     android:singleLine="true"
@@ -46,7 +46,7 @@
                         android:id="@+id/descriptionTextRoute"
                         android:layout_width="fill_parent"
                         android:layout_height="match_parent"
-                        android:gravity="right"
+                        android:gravity="end"
                         android:maxLines="2"
                         android:padding="10dp"
                         android:textColor="@color/material_secondary_text"
